gitops/infrastructure/gateway/ethereum-gateway-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ethereum-gateway-istio
  namespace: ethereum
  labels:
    app.kubernetes.io/component: gateway-api
    app.kubernetes.io/instance: base
    app.kubernetes.io/name: ethereum-node
    app.kubernetes.io/version: v1.0.0
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    app.kubernetes.io/component: gateway-api
    app.kubernetes.io/name: ethereum-node
