gitops/infrastructure/gateway/grafana-gateway-v1.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: monitoring
  labels:
    app.kubernetes.io/component: monitoring-infrastructure
    app.kubernetes.io/instance: base
    app.kubernetes.io/name: grafana
    app.kubernetes.io/version: v1.0.0
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
