gitops/infrastructure/gateway/ethereum-httproute-v1beta1.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ethereum-httproute
  namespace: ethereum
  labels:
    app.kubernetes.io/component: ethereum-infrastructure
    app.kubernetes.io/instance: base
    app.kubernetes.io/name: ethereum-node
    app.kubernetes.io/version: v1.0.0
spec:
  parentRefs:
    - name: ethereum-gateway
      namespace: ethereum
  hostnames:
    - "ethereum.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ethereum-service
          port: 8545
          weight: 1
