gitops/infrastructure/gateway/prometheus-httproute-v1beta1.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus-httproute
  namespace: monitoring
  labels:
    app.kubernetes.io/component: monitoring-infrastructure
    app.kubernetes.io/instance: base
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/version: v1.0.0
spec:
  parentRefs:
    - name: prometheus-gateway
      namespace: monitoring
  hostnames:
    - "prometheus.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-service
          port: 9090
          weight: 1
